--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Apple Pie Recipe</title>
+    <title>My CV</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/c3b0f38585.js" crossorigin="anonymous"></script>
 </head>
